# my_coder

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  todo.md  todo.md.txt  woo.ipynb
.claude/: settings.local.json
app/: main.py
backend/agent/: core.py  executor.py  models.py  permissions.py  planner.py
backend/llm/: anthropic.py  base.py  factory.py  ollama.py  openai_compat.py
backend/server/: app.py  routes.py  schemas.py
backend/tools/: base.py  filesystem.py  registry.py  shell.py  web_search.py
configs/: default.yaml
frontend/electron-app/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
